# phenotype

./: .editorconfig  .gitignore  .intron.toml  README.md  THIRD_PARTY_NOTICES.md  exon.toml  mise.toml  pyproject.toml
.github/workflows/: ci.yml  main-artifacts.yml  pages.yml  release.yml
assets/material-symbols/: README.md
cli/: README.md  exon.toml
cli/src/: main.cpp  phenotype.cli.cppm
cli/tests/: test_cli.cpp
core/: exon.toml
core/include/phenotype/: ui.hpp
core/src/: phenotype.cppm
core/tests/: test_empty.cpp
docs/: APPLE_GLASS_GUI_ROADMAP.md  ARCHITECTURE.md  CLAUDE_DESIGN_INTEGRATION.md  DEBUG_WORKFLOW.md  EXAMPLES_COVERAGE.md  MODERN_UI_API.md  PHENOTYPE_CLI_ROADMAP.md  bench_baseline.json  docs.wasm  exon.toml  index.html  phenotype.js  runtime-architecture.md
docs/src/: main.cpp
examples/android/: .gitignore  README.md  artifact_manifest.json  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/main/cpp/: CMakeLists.txt  phenotype_android_main.cpp
examples/counter/: exon.toml  index.html
examples/counter/src/: main.cpp
examples/file_explorer_desktop/: README.md  artifact_manifest.json  exon.toml  phenotype.package.toml
examples/file_explorer_desktop/assets/: file-explorer-icon.txt
examples/file_explorer_desktop/locales/: en.toml  ko.toml
examples/file_explorer_desktop/src/: README.md  file_explorer_desktop.buttons_and_sidebar.cppm  file_explorer_desktop.cppm  file_explorer_desktop.input_messages.cppm  file_explorer_desktop.keyboard.cppm  file_explorer_desktop.messages_and_startup.cppm  file_explorer_desktop.overflow_and_grid.cppm  file_explorer_desktop.painting_icons.cppm  file_explorer_desktop.runtime_preferences.cppm  file_explorer_desktop.settings_and_views.cppm  file_explorer_desktop.state_and_debug.cppm  file_explorer_desktop.style.cppm  file_explorer_desktop.text_and_status.cppm  file_explorer_desktop.toolbar.cppm  file_explorer_desktop.update.cppm  file_explorer_desktop.view.cppm  main.cpp
examples/file_explorer_mobile/: README.md  artifact_manifest.json  exon.toml  phenotype.package.toml
examples/file_explorer_mobile/assets/: file-explorer-icon.txt
examples/file_explorer_mobile/fonts/: pretendard.alias.toml
examples/file_explorer_mobile/locales/: en.toml  ko.toml
examples/file_explorer_mobile/src/: README.md  file_explorer_mobile.cppm  file_explorer_mobile.input_messages.cppm  file_explorer_mobile.messages_and_runtime.cppm  main.cpp  (+4 more)
examples/file_explorer_shared/: README.md  exon.toml  file_explorer_model.hpp
examples/files/: README.md  exon.toml
examples/flight_board/: exon.toml
examples/glass_showcase/: artifact_manifest.accessibility.json  artifact_manifest.json  exon.toml  glass_showcase.drive
examples/glass_showcase_shared/: README.md  exon.toml
examples/hello/: exon.toml  index.html
examples/modern_counter/: exon.toml
examples/native/: CMakeLists.txt  exon.toml
examples/native-counter/: exon.toml
examples/native/src/: main.cpp
examples/workbook/: exon.toml
include/phenotype/: material_symbols.hpp
libs/metal-cpp/: CMakeLists.txt  exon.toml
macos/: CMakeLists.txt  exon.toml
macos/include/phenotype/: macos.hpp
macos/src/: phenotype.macos.cpp  phenotype.macos.cppm
macos/src/native/: libcxx_atomic_wait_compat.cpp  phenotype.macos.cpp
native/: README.md  exon.toml
native/shaders/: phenotype.wgsl
native/src/: host.cpp  main.cpp  renderer.cpp  renderer.h  text.cpp  text.h
shim/: phenotype-otel.js  phenotype.js
shim/otel-example/: README.md  collector-config.yaml  docker-compose.yml
src/: phenotype.commands.cppm  phenotype.cppm  phenotype.diag.cppm  phenotype.host.cppm  phenotype.icons.cppm  phenotype.layout.cppm  phenotype.material.cppm  phenotype.material.executor_summary.cppm  phenotype.material.plan.cppm  phenotype.material.runtime.cppm  phenotype.material.types.cppm  phenotype.native.android.cppm  phenotype.native.android.shaders.inl  phenotype.native.cppm  phenotype.native.macos.commands.cppm  phenotype.native.macos.cppm  phenotype.native.macos.image.cppm  phenotype.native.macos.input.cppm  phenotype.native.macos.material.cppm  phenotype.native.macos.objc.cppm  phenotype.native.macos.render.cppm  phenotype.native.macos.shaders.cppm  phenotype.native.macos.text.cppm  phenotype.native.platform.cppm  phenotype.native.shell.cppm  phenotype.native.shell.glfw.cppm  phenotype.native.shell.macos.cppm  phenotype.native.shell.windows.cppm  phenotype.native.stub.cppm  phenotype.native.windows.cppm  phenotype.paint.cppm  phenotype.resources.cppm  phenotype.state.cppm  phenotype.svg.cppm  phenotype.theme_json.cppm  phenotype.types.cppm  phenotype.wasm.cppm  phenotype.widget.glass.cppm  phenotype_diag.cppm  phenotype_host.h  (+4 more)
src/phenotype.native.android.shaders/: arc.frag  arc.vert  color.frag  color.vert  image.frag  image.vert  text.frag  text.vert  tri.frag  tri.vert
tests/: test_accordion.cpp  test_animation.cpp  test_animation_tick.cpp  test_diag.cpp  test_dialog.cpp  test_empty.cpp  test_file_explorer_model.cpp  test_flex_weight.cpp  test_framework_local.cpp  test_material.cpp  test_material_container.cpp  test_material_executor_summary.cpp  test_memory_safety.cpp  test_modern_surface.cpp  test_modern_ui.cpp  test_native.cpp  test_overlay.cpp  test_path_wire.cpp  test_phenotype.cpp  test_phenotype_material_surfaces.cpp  test_phenotype_widget_styles.cpp  test_scissor_batch.cpp  test_scroll_view.cpp  test_svg.cpp  test_tabs.cpp  test_token_roundtrip.cpp  test_widget_snapshots.cpp  test_widgets_batch_1.cpp
tools/: compile_android_shaders.sh  sync_themes_from_phenotype_web.py  test_verify_artifact_bundle.py  verify_artifact_bundle.py  verify_file_explorer_artifacts.sh  verify_glass_showcase_accessibility_artifact.sh  verify_glass_showcase_artifact.sh
tools/android/: README.md  _env.sh  apk.sh  clean.sh  contract.sh  doctor.sh  emu_list.sh  emu_start.sh  emu_stop.sh  install.sh  launch.sh  logs.sh  run.sh  screencap.sh  stop.sh
tools/bench_render/: exon.toml
tools/phenotype_cli/: README.md  exon.toml
(+113 files in other folders)
